fix non-responsive sidebar elements (buttons and input field), too long text is still not displayed properly

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ a {
 
 #sidebar-input {
     display: flex;
+    width: 9vw;
     flex-direction: column;
     align-items: center;
     margin-top: 8px;
@@ -65,7 +66,7 @@ a {
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     box-sizing: border-box;
-    width: 9vw;
+    width: 7vw;
     padding-right: 4vw;
     color: white;
     background-color: #9146ff;
